# ihc-obstruction-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: llm.example.toml
data/: canonical_literature_rows.json  generated_candidates.json  schema_notes.md  seed_rows.json
docs/: analytics.md  data_model.md  literature_pipeline.md  llm_configuration.md  non_claims.md  obstruction_channels.md  reproducibility.md  seed_dataset.md
notebooks/: README.md
reports/: README.md  association_rules.md  bottleneck_summary.md  candidate_generation.md  canonical_literature_table.md  channel_counts.md  channel_summary.md  channel_table.md  channel_year_distribution.md  classifier_report.md  cup_product_validation.md  discovered_source_channel_hints.md  family_channel_summary.md  family_legitimacy_summary.md  family_year_summary.md  feature_matrix.md  legitimacy_tier_summary.md  literature_discovery_report.md  literature_llm_extraction.md  literature_manual_extraction.md  literature_packets.md  literature_queue.md  literature_review_status.md  pilot_source_channel_intents.md  pilot_sources_summary.md  promoted_literature_candidates.md  seed_dataset_summary.md  theorem_backed_family_summary.md
tests/: test_analytics_metadata.py  test_analytics_reports.py  test_association_rules.py  test_candidate_generator.py  test_canonical_literature_rows.py  test_channel_distribution.py  test_cup_products.py  test_discovery_dedupe.py  test_discovery_import.py  test_discovery_providers.py  test_discovery_queries.py  (+25 more)
(+84 files in other folders)
