[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ihc-obstruction-lab"
version = "0.1.0"
description = "Machine-readable obstruction-channel framework for integral Hodge conjecture research records."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Abdul Rahman", email = "arahman@alum.howard.edu" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "matplotlib>=3",
  "pytest>=8",
]
sympy = [
  "sympy>=1.12",
]
llm-openai = [
  "openai>=1.0",
]
llm-anthropic = [
  "anthropic>=0.30",
]
llm = [
  "openai>=1.0",
  "anthropic>=0.30",
]
analytics = [
  "matplotlib>=3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
